@@ -1,5 +1,5 @@
 <div align="center">
-  <img src="src/docs/img/Logo.jpeg" alt="Logo JavaliCoders" width="500px">
+  <img src="src/main/resources/images/Logo.jpeg" alt="Logo JavaliCoders" width="500px">
   <h2>JavaliCoders</h2>
 
   | [Desafio](#desafio) | [Solução](#solucao) | [Backlog do Produto](#backlog) | [DoR e DoD](#dor-dod) | [Evolução do Projeto](#evolucao) | [Cronograma de Sprints](#sprint) | [Tecnologias](#tecnologias) | [Estrutura do Projeto](#estrutura) | [Como Executar](#execucao) | [Documentação](#documentacao) | [Equipe](#equipe) |
@@ -25,54 +25,47 @@ A plataforma desenvolvida pela equipe JavaliCoders centraliza todo o ciclo de co
 
 ### SPRINT 1 - Fundação Operacional
 
-| Rank | Prioridade | User Story | Story Points | Sprint | Status |
-| --- | --- | --- | --- | --- | --- |
-| 1 | Alta | Como diretor, quero cadastrar novos usuários no sistema, para permitir que eles acessem a plataforma conforme seu perfil de acesso. | 3 | 1 | ⏳ |
-| 2 | Alta | Como funcionário, quero fazer login no sistema, para acessar as funcionalidades conforme meu perfil. | 5 | 1 | ⏳ |
-| 3 | Alta | Como financeiro, quero cadastrar produtos, para utilizá-los em pedidos e cotações. | 3 | 1 | ⏳ |
-| 4 | Alta | Como usuário, quero visualizar o estoque, para acompanhar a disponibilidade de produtos. | 3 | 1 | ⏳ |
-| 11 | Alta | Como financeiro, quero cadastrar fornecedores, para realizar cotações e analisar opções mais viáveis. | 3 | 1 | ⏳ |
-| 12 | Alta | Como financeiro, quero vincular produtos aos fornecedores, para registrar quais fornecedores vendem cada produto. | 3 | 1 | ⏳ |
-| 5 | Alta | Como funcionário, quero criar um pedido de compra, para solicitar materiais ou produtos necessários para o setor. | 5 | 1 | ⏳ |
-| 6 | Alta | Como funcionário, quero visualizar pedidos feitos, para consultar informações, histórico e alterações de status. | 1 | 1 | ⏳ |
+| Rank | Prioridade | User Story                                                                                                                          | Story Points | Sprint | Status |
+|------| --- |-------------------------------------------------------------------------------------------------------------------------------------| --- | --- | --- |
+| 1    | Alta | Como diretor, quero cadastrar novos usuários no sistema, para permitir que eles acessem a plataforma conforme seu perfil de acesso. | 3 | 1 | ✅ |
+| 2    | Alta | Como funcionário, quero fazer login no sistema, para acessar as funcionalidades conforme meu perfil.                                | 5 | 1 | ✅ |
+| 3    | Alta | Como financeiro, quero cadastrar produtos, para utilizá-los em pedidos e cotações.                                                  | 3 | 1 | ✅ |
+| 4    | Alta | Como usuário, quero visualizar o estoque, para acompanhar a disponibilidade de produtos.                                            | 3 | 1 | ✅ |
+| 5    | Alta | Como financeiro, quero cadastrar fornecedores, para realizar cotações e analisar opções mais viáveis.                               | 3 | 1 | ✅ |
+| 6    | Alta | Como financeiro, quero visualizar os fornecedores, para analisar suas informações e escolher fornecedor viável para as cotações.    | 3 | 1 | ✅ |
+| 7    | Alta | Como funcionário, quero criar um pedido de compra, para solicitar materiais ou produtos necessários para o setor.                   | 5 | 1 | ✅ |
+| 8    | Alta | Como funcionário, quero visualizar pedidos feitos, para consultar informações, histórico e alterações de status.                    | 1 | 1 | ✅ |
 
 ---
 
 ### SPRINT 2 - Ciclo Completo de Logística
 
 | Rank | Prioridade | User Story | Story Points | Sprint | Status |
-| --- | --- | --- | --- | --- | --- |
-| 7 | Alta | Como diretor/administrador, quero aprovar pedidos de compra, para autorizar cotação. | 3 | 2 | ⏳ |
-| 8 | Alta | Como diretor/administrador, quero negar pedidos, para bloquear compras desnecessárias. | 1 | 2 | ⏳ |
-| 9 | Média | Como solicitante, quero editar pedido antes da aprovação, para corrigir informações. | 1 | 2 | ⏳ |
-| 10 | Média | Como solicitante, quero excluir um pedido feito por mim, para cancelar solicitações. | 1 | 2 | ⏳ |
-| 14 | Média | Como financeiro, quero atualizar o status dos pedidos aprovados, para registrar quando os pedidos estão em processo de cotação com os fornecedores. | 1 | 2 | ⏳ |
-| 13 | Alta | Como financeiro, quero visualizar os fornecedores de um produto, para analisar opções de compra. | 2 | 2 | ⏳ |
-| 15 | Alta | Como financeiro, quero registrar uma cotação realizada para um pedido de compra, para solicitar aprovação da diretoria antes de realizar a compra. | 3 | 2 | ⏳ |
-| 16 | Alta | Como diretor, quero aprovar ou rejeitar uma cotação, para autorizar ou negar a compra. | 2 | 2 | ⏳ |
-| 17 | Média | Como financeiro, quero registrar que a compra de um pedido foi realizada, para atualizar o status do pedido e iniciar o acompanhamento da entrega. | 1 | 2 | ⏳ |
-| 18 | Alta | Como funcionário, quero filtrar os pedidos, para encontrar mais facilmente o pedido desejado. | 2 | 2 | ⏳ |
-| 19 | Alta | Como operacional, quero registrar a nota fiscal, para iniciar o processo de recebimento. | 1 | 2 | ⏳ |
-| 20 | Média | Como operador de conferência, quero conferir os produtos recebidos, para validar a entrega. | 3 | 2 | ⏳ |
-| 21 | Alta | Como operador de conferência, quero registrar divergências na entrega, para informar problemas no recebimento. | 2 | 2 | ⏳ |
-| 22 | Alta | Como operacional, quero registrar a solução de uma divergência, para dar continuidade ao pedido. | 2 | 2 | ⏳ |
-| 23 | Alta | Como operador de conferência, quero confirmar o recebimento correto, para liberar os produtos no estoque. | 1 | 2 | ⏳ |
-| 24 | Alta | Como operador de estoque, quero registrar a retirada do material, para entregar ao solicitante. | 3 | 2 | ⏳ |
-| 25 | Alta | Como operacional, quero finalizar o pedido, para indicar que o processo foi concluído. | 1 | 2 | ⏳ |
+|------|------------|------------|--------------|--------|--------|
+| 9   | Alta       | Como diretor/administrador, quero aprovar pedidos de compra, para autorizar cotação.                                                                | 3            | 2 | ✅ |
+| 10  | Alta       | Como diretor/administrador, quero negar pedidos, para bloquear compras desnecessárias.                                                              | 1            | 2 | ✅ |
+| 11  | Média      | Como financeiro/diretoria, quero cancelar pedidos que não foram aprovados, para indicar que não serão realizados.                                   | 1            | 2 | ✅ |
+| 12  | Alta       | Como financeiro, quero registrar uma cotação realizada, para um pedido de compra, para solicitar aprovação da diretoria antes de realizar a compra. | 3            | 2 | ✅ |
+| 13  | Alta       | Como diretor ou financeiro, quero visualizar as cotações de um pedido,para analisar fornecedores e tomar decisão de aprovação ou compra.            | 2            | 2 | ✅ |
+| 14  | Alta       | Como diretor, quero aprovar ou rejeitar uma cotação, para autorizar ou negar a compra.                                                              | 2            | 2 | ✅ |
+| 15  | Média      | Como financeiro, quero registrar que a compra de um pedido foi realizada, para atualizar o status do pedido e iniciar o acompanhamento da entrega.  | 3            | 2 | ✅ |
+| 16  | Média      | Como funcionário, quero filtrar os pedidos, para encontrar mais facilmente o pedido desejado.                                                       | 2            | 2 | ✅ |
+| 17  | Alta       | Como operacional, quero registrar a nota fiscal, para iniciar o processo de recebimento.                                                            | 2            | 2 | ✅ |
+| 18  | Alta       | Como operador de conferência, quero conferir os produtos recebidos, para validar a entrega.                                                         | 5            | 2 | ✅ |
+| 19  | Alta       | Como operador de estoque, quero registrar a saída do material, para atender ao pedido.                                                              | 5            | 2 | ✅ |
 
 ---
 
 ### SPRINT 3 - Inteligência e Valor Agregado
 
 | Rank | Prioridade | User Story | Story Points | Sprint | Status |
-| --- | --- | --- | --- | --- | --- |
-| 26 | Média | Como funcionário, quero filtrar os produtos do estoque de acordo com a quantidade, para facilitar a visualização de produtos que precisam ser comprados. | 5 | 3 | ⏳ |
-| 27 | Média | Como financeiro, quero filtrar fornecedores, para facilitar a análise. | 5 | 3 | ⏳ |
-| 28 | Média | Como operador de estoque, quero registrar manualmente a entrada de material no estoque, para corrigir ou ajustar o saldo quando houver reposição ou erro de contagem. | 2 | 3 | ⏳ |
-| 29 | Média | Como operador de estoque, quero registrar manualmente a saída de um produto do estoque, para manter o controle correto do saldo de estoque. | 2 | 3 | ⏳ |
-| 30 | Alta | Como funcionário, quero visualizar o histórico de movimentações do estoque, para acompanhar entradas, saídas e ajustes realizados. | 5 | 3 | ⏳ |
-| 31 | Alta | Como diretor/administrador, quero visualizar um dashboard visual com indicadores, para acompanhar o desempenho das compras e do funcionamento dos processos. | 8 | 3 | ⏳ |
-| 32 | Média | Como diretor, quero alterar os dados de um usuário, para manter as informações e permissões atualizadas. | 2 | 3 | ⏳ |
+|------|------------|------------|--------------|--------|--------|
+| 20   | Média | Como funcionário, quero filtrar os produtos do estoque de acordo com a quantidade, para facilitar a visualização de produtos que precisam ser comprados. | 2            | 3 | ⏳ |
+| 21   | Média | Como diretor/financeiro, quero poder acessar pedidos, cotações e compras pesquisando por um produto, para facilitar o acesso ao histórico de compra de um produto. | 3            | 3 | ⏳ |
+| 22   | Média | Como operador de estoque, quero registrar manualmente a entrada de material no estoque, para corrigir ou ajustar o saldo quando houver reposição ou erro de contagem. | 2            | 3 | ⏳ |
+| 23   | Média | Como operador de estoque, quero registrar manualmente a saída de um produto do estoque, para manter o controle correto do saldo de estoque. | 2            | 3 | ⏳ |
+| 24   | Alta | Como funcionário, quero visualizar o histórico de movimentações do estoque, para acompanhar entradas, saídas e ajustes realizados. | 5            | 3 | ✅ |
+| 25   | Alta | Como diretor/administrador, quero visualizar um dashboard visual com indicadores, para acompanhar o desempenho das compras e do funcionamento dos processos. | 8            | 3 | ⏳ |
 
 ---
 
@@ -101,7 +94,7 @@ A plataforma desenvolvida pela equipe JavaliCoders centraliza todo o ciclo de co
 
 #### 🏁 Sprint 1 - Fundação Operacional
 
-- **Status**: ⏳ Em andamento
+- **Status**: ✅ Concluída
 - **Período**: 16/03 a 05/04
 - **Objetivo Principal**: Estruturar autenticação, cadastros base (usuários, produtos, fornecedores) e criação de pedidos
 - **Principais Entregas**:
@@ -115,7 +108,7 @@ A plataforma desenvolvida pela equipe JavaliCoders centraliza todo o ciclo de co
 
 #### 🎯 Sprint 2 - Ciclo Completo de Logística
 
-- **Status**: ⏳ Não iniciada
+- **Status**: ✅ Concluída
 - **Período**: 13/04 a 03/05
 - **Objetivo Principal**: Implementar fluxo completo de aprovação, cotação, recebimento e entrega
 - **Principais Entregas**:
@@ -129,7 +122,7 @@ A plataforma desenvolvida pela equipe JavaliCoders centraliza todo o ciclo de co
 
 #### 🎯 Sprint 3 - Inteligência e Valor Agregado
 
-- **Status**: ⏳ Não iniciada
+- **Status**: ⏳ Em andamento
 - **Período**: 11/05 a 31/05
 - **Objetivo Principal**: Adicionar filtros avançados, movimentações manuais de estoque e dashboard gerencial
 - **Principais Entregas**:
@@ -144,25 +137,25 @@ A plataforma desenvolvida pela equipe JavaliCoders centraliza todo o ciclo de co
 
 ## 📅 Cronograma de Sprints <a name="sprint"></a>
 
-| Sprint | Período | Documentação | Vídeo do Incremento |
-| --- | --- | --- | --- |
-| 🔖 **SPRINT 1** | 16/03 a 05/04 | <!-- TODO: [Sprint 1 Docs](link) --> | <!-- TODO: [Incremento 1](link YouTube) --> |
-| 🔖 **SPRINT 2** | 13/04 a 03/05 | <!-- TODO: [Sprint 2 Docs](link) --> | <!-- TODO: [Incremento 2](link YouTube) --> |
-| 🔖 **SPRINT 3** | 11/05 a 31/05 | <!-- TODO: [Sprint 3 Docs](link) --> | <!-- TODO: [Incremento 3](link YouTube) --> |
+| Sprint | Período | Documentação                                          | Vídeo do Incremento |
+| --- | --- |-------------------------------------------------------| --- |
+| 🔖 **SPRINT 1** | 16/03 a 05/04 | [Sprint 1 Docs](src/docs/processo/sprints/sprint1.md) | [Incremento 1](https://youtu.be/emA2FphtdvA?si=2VLTmvQdCKcekJwb)|
+| 🔖 **SPRINT 2** | 13/04 a 03/05 | [Sprint 2 Docs](src/docs/processo/sprints/sprint2.md) | <!-- TODO: [Incremento 2](link YouTube) --> |
+| 🔖 **SPRINT 3** | 11/05 a 31/05 | [Sprint 3 Docs](src/docs/processo/sprints/sprint3.md) | <!-- TODO: [Incremento 3](link YouTube) --> |
 
 ---
 
 ## 💻 Tecnologias <a name="tecnologias"></a>
 
 ![Java](https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white)
-![Spring Boot](https://img.shields.io/badge/Spring_Boot-6DB33F?style=for-the-badge&logo=springboot&logoColor=white)
-![HTML5](https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white)
-![CSS3](https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white)
-![JavaScript](https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black)
-![Bootstrap](https://img.shields.io/badge/Bootstrap-7952B3?style=for-the-badge&logo=bootstrap&logoColor=white)
-<!-- TODO: adicionar banco de dados utilizado: MySQL, PostgreSQL, H2, etc. -->
-<!-- TODO: adicionar outras ferramentas: Maven/Gradle, Thymeleaf, etc. -->
-
+![JavaFX](https://img.shields.io/badge/JavaFX-007396?style=for-the-badge&logo=java&logoColor=white)
+![MySQL](https://img.shields.io/badge/MySQL-4479A1?style=for-the-badge&logo=mysql&logoColor=white)
+![IntelliJ IDEA](https://img.shields.io/badge/IntelliJ_IDEA-000000?style=for-the-badge&logo=intellijidea&logoColor=white)
+![Scene Builder](https://img.shields.io/badge/Scene_Builder-007396?style=for-the-badge&logo=java&logoColor=white)
+![Figma](https://img.shields.io/badge/Figma-F24E1E?style=for-the-badge&logo=figma&logoColor=white)
+![Jira](https://img.shields.io/badge/Jira-0052CC?style=for-the-badge&logo=jira&logoColor=white)
+![Git](https://img.shields.io/badge/Git-F05032?style=for-the-badge&logo=git&logoColor=white)
+![GitHub](https://img.shields.io/badge/GitHub-181717?style=for-the-badge&logo=github&logoColor=white)
 ---
 
 ## 📁 Estrutura do Projeto <a name="estrutura"></a>
@@ -171,88 +164,141 @@ A plataforma desenvolvida pela equipe JavaliCoders centraliza todo o ciclo de co
 
 ```
 ├── 📁 src
-│   └── 📁 main
+│   ├── 📁 docs
+│   │   ├── 📁 cliente
+│   │   │   ├── 📄 manual_de_instalacao.pdf
+│   │   │   └── 📄 user_manual.md
+│   │   └── 📁 processo
+│   │       ├── 📁 sprints
+│   │       ├── 📄 dor_e_dod.md
+│   │       ├── 📄 estrategia_de_branch.md
+│   │       ├── 📄 modelo_logico_banco.png
+│   │       ├── 📄 modelo_logico_bd.mwb
+│   │       └── 📄 padrao_de_commit.md
+│   │
+│   ├── 📁 main
 │       ├── 📁 java
-│       │   └── 📁 com/javalicoders
-│       │       └── ... (controllers, services, models, repositories)
+│       │   └── 📁 api
+│       │       ├── 📁 connection
+│       │       ├── 📁 controller
+│       │       ├── 📁 DAO
+│       │       ├── 📁 model
+│       │       ├── 📁 util
+│       │       ├── ☕ Main.java
+│       │       └── ☕ MainApp.java
+│       │
 │       └── 📁 resources
-│           ├── 📁 static
-│           ├── 📁 templates
-│           └── ⚙️ application.properties
-├── 📁 documents
-│   ├── 📁 cliente
-│   └── 📁 processo
-│       ├── 📁 sprints
-│       ├── 📝 dor_e_dod.md
-│       ├── 📝 estrategia-de-branches.md
-│       └── 📝 padrao-de-commit.md
+│           ├── 📁 db
+│           ├── 📁 images
+│           ├── 📁 style
+│           └── 📁 view
+│
 ├── ⚙️ .gitignore
 ├── 📄 pom.xml
-└── 📝 README.md
+└── 📄 README.md
 ```
 
 ---
 
 ## ⚡ Como Executar <a name="execucao"></a>
 
-### Pré-requisitos
+## Pré-Requisitos
 
-<!-- TODO: Preencher com as versões e ferramentas reais do projeto -->
-- [Java JDK](https://www.oracle.com/java/technologies/downloads/) (versão <!-- TODO: ex: 17 ou 21 -->)
-- [Maven](https://maven.apache.org/download.cgi) ou [Gradle](https://gradle.org/install/) <!-- TODO: indicar qual o projeto usa -->
+Certifique-se de ter instalado:
+
+- [Java JDK 21+](https://www.oracle.com/java/technologies/downloads/)
+- [IntelliJ IDEA](https://www.jetbrains.com/idea/download/)
+- [MySQL Server 8.0+](https://dev.mysql.com/downloads/mysql/)
 - [Git](https://git-scm.com/downloads)
-- [IntelliJ IDEA](https://www.jetbrains.com/idea/download/) ou [VS Code](https://code.visualstudio.com/download) (ou editor de sua preferência)
-- <!-- TODO: banco de dados necessário, ex: MySQL 8+ -->
 
-### Passo a passo
+---
 
-<!-- TODO: Preencher com as instruções reais de execução do projeto -->
-
-**1.** Clone o repositório:
+## 1. Clonar o Repositório
 
 ```bash
 git clone https://github.com/JavaliCoders/API-2026-1.git
 cd API-2026-1
 ```
 
-**2.** Configure o banco de dados:
+---
 
-```
-# TODO: instruções de configuração do banco (ex: criar schema, ajustar application.properties)
+## 2. Configurar o Banco de Dados
+
+1. Inicie o MySQL Server.
+2. Crie o banco de dados:
+
+```sql
+CREATE DATABASE bd_api;
 ```
 
-**3.** Execute o projeto:
+3. Execute o script de criação das tabelas:
 
 ```bash
-# Com Maven
-./mvnw spring-boot:run
-
-# Com Maven no Windows
-mvnw.cmd spring-boot:run
+src/main/resources/db/bd_api.sql
 ```
 
-**4.** Acesse no navegador: `http://localhost:8080`
+---
+
+## 3. Abrir no IntelliJ IDEA
+
+1. Abra o IntelliJ e clique em **File > Open**, selecionando a pasta do projeto.
+2. Aguarde o carregamento das dependências (Maven/Gradle).
+3. Confirme que o JDK está¡ configurado em **File > Project Structure > Project**.
 
 ---
+
+## 4. Executar o Projeto
+
+### Opção 1: Pelo IntelliJ (recomendado para desenvolvimento)
+
+1. Certifique-se de que o MySQL Server está rodando.
+2. Localize a classe principal (`Main`) em `src/main/java`.
+3. Clique com o botão direito em **Run 'Main'** ou pressione `Shift + F10`.
+
+### Opção 2: Gerando o .jar
+
+1. Vá em **File > Project Structure > Artifacts**.
+2. Clique em **+ > JAR > From modules with dependencies**.
+3. Selecione a classe principal no campo **Main Class** e clique em **OK**.
+4. Vá em **Build > Build Artifacts > Build**.
+5. O `.jar` será gerado em `out/artifacts/`.
+6. Execute com:
+
+```bash
+java -jar API-2026-1.jar
+```
+
+> Caso ocorra erro de módulos com JavaFX, use:
+> ```bash
+> java --module-path /caminho/para/javafx/lib --add-modules javafx.controls,javafx.fxml -jar API-2026-1.jar
+> ```
+
+---
+
+## Dicas
+
+- Sempre verifique se o MySQL Server está ativo antes de rodar o projeto.
+- Para atualizar o repositório: `git pull origin main`
+- Após alterar o `pom.xml`, recarregue o Maven com botão direito no arquivo no **Maven > Reload Project**Como Executar o Projeto
+
 
 ## 📄 Documentação <a name="documentacao"></a>
 
 <!-- TODO: Atualizar os links conforme os arquivos forem criados -->
 
-> Pasta de documentação: [documents/](documents/)
+> Pasta de documentação: [docs](src/docs)
 >
-> Checklist de DoR e DoD: <!-- TODO: [Checklist](documents/processo/dor_e_dod.md) -->
+> Checklist de DoR e DoD: [Checklist](docs/processo/dor_e_dod.md) 
 >
-> DoR e DoD por Sprint: <!-- TODO: [DoR e DoD](documents/processo/sprints) -->
+> DoR e DoD por Sprint: [DoR e DoD](docs/processo/sprints)
 >
-> Estratégia de Branch: <!-- TODO: [Branch](documents/processo/estrategia-de-branches.md) -->
+> Estratégia de Branch: [Branch](docs/processo/estrategia_de_branch.md) 
 >
-> Padrão de Commits: <!-- TODO: [Commits](documents/processo/padrao-de-commit.md) -->
+> Padrão de Commits: [Commits](docs/processo/padrao_de_commit.md)
 >
-> Manual de Usuário: <!-- TODO: [Manual](documents/cliente/manual_de_usuario.pdf) -->
->
-> Manual de Instalação: <!-- TODO: [Manual](documents/cliente/manual_de_instalacao.pdf) -->
-
+> Manual de instalação: [Manual de Instalação](src/docs/cliente/manual_de_instalacao.pdf)
+> 
+> Manual do usuário: [Manual do Usuário](src/docs/cliente/user_manual.md)
 ---
 
 ## 🎓 Equipe <a name="equipe"></a>
@@ -300,12 +346,6 @@ mvnw.cmd spring-boot:run
       <td>Developer</td>
       <td><a href="https://github.com/CaioMoreiraujo"><img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"></a></td>
       <td><a href="https://www.linkedin.com/in/caiomoreiradearaujo/"><img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"></a></td>
-    </tr>
-    <tr>
-      <td>Mateus Borges</td>
-      <td>Developer</td>
-      <td><a href="https://github.com/MGBorgess"><img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"></a></td>
-      <td><a href="https://www.linkedin.com/in/matheus-de-oliveira-b68bbb383/"><img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"></a></td>
     </tr>
     <tr>
       <td>João Schmidt</td>
